fixed broken pagination on mobile

--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -226,6 +226,13 @@
       line-height: 24px;
     }
 
+    .pagination {
+      .first, .prev, .next, .last {
+        text-indent: -9999px;
+        position: relative;
+      }
+    }
+
     .tabs .tab button {
       text-indent: -9999px;
 
