--- a/app/assets/stylesheets/core/_pagination.scss
+++ b/app/assets/stylesheets/core/_pagination.scss
@@ -40,4 +40,31 @@
     float: none;
     border: none;
   }
+
+  .first, .prev, .next, .last {
+    &:before {
+      position: absolute;
+      left: 0;
+      top: 0;
+      text-align: center;
+      width: 100%;
+      line-height: 25px;
+    }
+  }
+
+  .prev:before {
+    content: "\2039";
+  }
+
+  .next:before {
+    content: "\203A";
+  }
+
+  .next:before {
+    content: "\00AB";
+  }
+
+  .next:before {
+    content: "\00BB";
+  }
 }
